# test-referal-task

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: testing.yml
src/: alembic.ini  app.py  config.py  test.db
src/admin/: __init__.py  auth.py  refferals.py  users.py
src/alembic/: env.py
src/alembic/versions/: 015f14e040b4_.py  053c3b99ca54_.py  198322360a6f_.py  4b76cd404231_.py  6998a3d80791_.py  6a31e02750e2_.py  974035c1c095_.py  99dd41418ac1_.py  a18173c28366_.py  bf7a12d253b4_.py  c89a2a10da26_.py  e976a0e33f69_.py  e9844712ef6d_.py  f702a6ae79a0_.py
src/api/: routers.py
src/api/referrals/: router.py  schemas.py  service.py
src/api/users/: dependencies.py  router.py  routers.py  schemas.py  service.py  utils.py
src/core/database/: __init__.py  db.py
src/core/database/models/: __init__.py  base.py  referals.py  referrals.py  refferals.py  users.py
src/core/factories/: __init__.py  referral_factories.py  user_factory.py
src/core/security/: jwt.py
src/core/utils/: createsuperuser.py
src/tests/: conftest.py  test_referrals.py  test_users.py
